frontend/test/should_pass/enum_101.grg
using enum_model_101;
